--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,12 @@ name = "gget"
 path = "src/main.rs"
 
 [dependencies]
+async-trait = "0.1.88"
 base64 = "0.22.1"
+blake3 = "1.8.2"
 clap = { version = "4.5.40", features = ["derive"] }
 clap_derive = "4.5.40"
+moka = { version = "0.12.10", features = ["future"] }
 reqwest = { version = "0.12.19", features = ["blocking", "json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
