--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio = { version = "1.45.1", features = ["full"] }
 [dev-dependencies]
 tempfile = "3.20.0"
 tokio-test = "0.4.4"
+warp = "0.3.7"
 
 [profile.release]
 opt-level = 3
