--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,33 +10,38 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    
+
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
-    
+
     - name: Install cargo-release
       run: cargo install cargo-release
-    
+
     - name: Configure Git
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'github-actions@github.com'
-    
+
     - name: Create Release
+      id: release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         cargo release --execute --no-confirm --no-publish --no-push --no-tag --no-verify
         VERSION=$(cargo metadata --format-version=1 | jq -r '.packages[0].version')
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
         git tag -a "v$VERSION" -m "Release v$VERSION"
         git push origin "v$VERSION"
-    
+        # wait for tag to be propagated to GitHub
+        sleep 5
+
     - name: Build Release
       run: cargo build --release
-    
+
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
+        tag_name: v${{ steps.release.outputs.version }}
         files: |
           target/release/gget
         generate_release_notes: true
