--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
 tokio = { version = "1.45.1", features = ["full"] }
+tree-sitter = "0.25.6"
+tree-sitter-go = "0.23.4"
 
 [dev-dependencies]
 tempfile = "3.20.0"
