--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ thiserror = "2.0.12"
 tokio = { version = "1.45.1", features = ["full"] }
 tree-sitter = "0.25.6"
 tree-sitter-go = "0.23.4"
+indexmap = "2.9.0"
 
 [dev-dependencies]
 tempfile = "3.20.0"
