--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tokio = { version = "1.45.1", features = ["full"] }
 tree-sitter = "0.25.6"
 tree-sitter-go = "0.23.4"
 indexmap = "2.9.0"
+futures = "0.3.31"
 
 [dev-dependencies]
 tempfile = "3.20.0"
