update tree-sitter query

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,13 @@ futures = "0.3.31"
 tempfile = "3.20.0"
 tokio-test = "0.4.4"
 warp = "0.3.7"
+criterion = "0.6.0"
 
 [profile.release]
 opt-level = 3
 lto = true
 codegen-units = 1
+
+[[bench]]
+name = "dependency_bench"
+harness = false
